# vatger-plugin-backend

./: .dockerignore  .env.sample  .gitignore  .octocov.yml  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/actions/service/pytest/: action.yml
.github/actions/service/setup/: action.yml
.github/workflows/: backend-ci.yml  backend-image.yml
docs/: class-diagram.mmd
src/: settings.py
src/api/: app.py  guards.py  router.py
src/api/adapters/: auth_adapter.py
src/api/models/: datafeed_dto.py  plugin_token_dto.py  request.py  silent_request_dto.py  user_dto.py
src/api/v1/: auth_controller.py  datafeed_controller.py  gdpr_controller.py  plugin_token_controller.py  routes.py  silent_request_controller.py
src/app/: broker.py  taskiq_app.py  tkq.py
src/app/tasks/: __init__.py  poll_datafeed.py  test_task.py
src/auth/: auth_service.py  vatsim_auth_service.py
src/containers/: datafeed.py  dependencies.py  mongo_container.py  mongodb_container.py  request.py
src/core/: security.py
src/domain/: api_key.py  datafeed.py  request.py
src/gateways/vatsim/: datafeed_dto.py  datafeed_gateway.py
src/interfaces/gateways/: datafeed_gateway_interface.py
src/interfaces/repositories/: api_key_repository_interface.py  base_repository.py  datafeed_repository_interface.py  plugin_token_repository_interface.py  request_repository_interface.py  silent_request_repository_interface.py  user_repository_interface.py
src/interfaces/services/: api_key_service_interface.py  auth_service_interface.py  plugin_token_service_interface.py  request_service_interface.py  silent_request_service_interface.py
src/models/: auth.py  datafeed.py  plugin_token.py  request.py  silent_request_model.py  user.py
src/repositories/memory/: request_repository.py
src/repositories/mongo/: api_key_repository.py  mongo_settings.py  plugin_token_repository.py  silent_request_repository.py  user_repository.py
src/repositories/redis/: datafeed_repository.py
src/services/: api_key_auth_service.py  api_key_service.py  auth_service.py  plugin_token_service.py  request_service.py  silent_request_service.py  vatsim_service.py
tests/api/: conftest.py  test_auth_controller.py  test_datafeed_controller.py  test_plugin_token_controller.py
tests/gateways/vatsim/: test_datafeed_dtos.py
tests/mocks/repositories/: api_key_repository_mock.py  mock_datafeed_repository.py  mock_plugin_token_repository.py  mock_silent_request_repository.py
tests/mocks/services/: api_key_service_mock.py
tests/models/: test_request.py
tests/repositories/memory/: test_request_repository.py
tests/repositories/mongo/: test_api_key_repository.py  test_plugin_token_repository.py  test_silent_request_repository.py  test_user_repository.py
tests/repositories/redis/: test_datafeed_repository.py
tests/services/: test_api_key_auth_service.py  test_api_key_service.py  test_auth_service.py  test_plugin_token_service.py  test_request_service.py  test_silent_request_service.py
